FIX height on mobile resolutions

--- a/src/screens/quiz/quiz_screen_styles.css
+++ b/src/screens/quiz/quiz_screen_styles.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url("pinkcloud.png");
+  background-image: url("assets/pinkcloud.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -289,6 +289,14 @@ label {
     height: 100vh;
     max-height: calc(100vh - 50px);
     border-radius: 0px;
+  }
+
+  .subtitle {
+    top: 65px;
+  }
+
+  .content-container {
+    height: 80%;
   }
 
   .divider {
